# hex-blob

./: CMakeLists.txt  hex_blob.h  version.h.in
hex_blob/: CMakeLists.txt  hex_blob.cc  hex_blob.h  version.h.in
sample/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  test01.cc
